Fix for suppressing enter characters in the query-field. Spinner z-index fix.

--- a/samples/plain/index.css
+++ b/samples/plain/index.css
@@ -748,6 +748,7 @@ footer {
 
 #spinner {
     visibility: hidden;
+    z-index: 100;
 }
 
 #spinner:before {
